# systemd-manager

./: .gitignore  CMakeLists.txt  README.md  systemd_manager.cpp  systemd_manager.h
.github/workflows/: systemd-manager.yml
